--- a/app/assets/stylesheets/themes.css.scss
+++ b/app/assets/stylesheets/themes.css.scss
@@ -1,3 +1,69 @@
 // Place all the styles related to the Themes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.maincontainer {
+	padding: 150px;
+	max-width: 500px;
+	background: #eaeaea;
+	border-radius: 3px;
+	margin: 100px auto;
+}
+
+.dropzone {
+	border: 3px dashed #222;
+	height: 200px;
+	width: 200px;
+	border-radius: 10px;
+	margin: 0px auto;
+}
+
+.dropzone .dropped {
+	background: url(../images/zip.png) no-repeat center center;
+}
+
+.maincontainer a:active, .maincontainer button:active, .maincontainer input[type="submit"]:active  {
+    box-shadow: 0px 1px #fff, inset 0px 1px 3px rgba(0,0,0,.25);
+ }
+
+.maincontainer a, .maincontainer button, .maincontainer input[type="submit"] {
+    width: 200px;
+    margin: 0px auto;
+    font-size: 14px;
+    color: #fff;
+    text-shadow: 0px 1px rgba(0,0,0,.8);
+    border-radius: 2px;
+    padding: 10px 0;
+    background: rgb(122,188,255); /* Old browsers */
+    background: -moz-linear-gradient(top,  rgba(122,188,255,1) 0%, rgba(96,171,248,1) 44%, rgba(64,150,238,1) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(122,188,255,1)), color-stop(44%,rgba(96,171,248,1)), color-stop(100%,rgba(64,150,238,1))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top,  rgba(122,188,255,1) 0%,rgba(96,171,248,1) 44%,rgba(64,150,238,1) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top,  rgba(122,188,255,1) 0%,rgba(96,171,248,1) 44%,rgba(64,150,238,1) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top,  rgba(122,188,255,1) 0%,rgba(96,171,248,1) 44%,rgba(64,150,238,1) 100%); /* IE10+ */
+    background: linear-gradient(to bottom,  rgba(122,188,255,1) 0%,rgba(96,171,248,1) 44%,rgba(64,150,238,1) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7abcff', endColorstr='#4096ee',GradientType=0 ); /* IE6-9 */
+    border: 1px solid rgba(64,150,238,1);
+    box-shadow: 0px 1px #fff, inset 0px 1px rgba(255,255,255,.4);
+    text-align: center;
+    display:block;
+    text-decoration: none !important;
+  }
+
+  .maincontainer form {
+  	width: 400px;
+  	margin: 0px auto;
+  }
+
+  input[type="text"], textarea {
+  	box-shadow: inset 0px 1px 3px rgba(0,0,0,.5) !important;
+  	background: #fff;
+  	border-radius: 3px;
+  	border: 1px solid #ccc;
+  	width: 100%;
+
+  }
+
+  input[type="text"] {
+  	font-size: 18px;
+  	color: #111;
+  }
