--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,4 +10,9 @@
  *
  *= require_self
  *= require_tree .
+ *= require vendor/jquery.fileupload-ui
  */
+
+@import "bootstrap";
+body { padding-top: 60px; }
+@import "bootstrap-responsive";
