Still needs unzipper

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,9 +10,34 @@
  *
  *= require_self
  *= require_tree .
- *= require vendor/jquery.fileupload-ui
- */
 
-@import "bootstrap";
-body { padding-top: 60px; }
-@import "bootstrap-responsive";
+*/
+
+html {
+
+}
+
+body {
+	margin: 0px;
+}
+
+#header {
+	width: 100%;
+	padding: 10px 5px;
+	box-shadow: 0px 2px 5px rgba(0,0,0,.25);
+
+	background: rgb(115,118,132); /* Old browsers */
+	background: -moz-linear-gradient(top,  rgba(115,118,132,1) 0%, rgba(86,94,99,1) 35%, rgba(40,52,59,1) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(115,118,132,1)), color-stop(35%,rgba(86,94,99,1)), color-stop(100%,rgba(40,52,59,1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  rgba(115,118,132,1) 0%,rgba(86,94,99,1) 35%,rgba(40,52,59,1) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  rgba(115,118,132,1) 0%,rgba(86,94,99,1) 35%,rgba(40,52,59,1) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  rgba(115,118,132,1) 0%,rgba(86,94,99,1) 35%,rgba(40,52,59,1) 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  rgba(115,118,132,1) 0%,rgba(86,94,99,1) 35%,rgba(40,52,59,1) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#737684', endColorstr='#28343b',GradientType=0 ); /* IE6-9 */
+
+}
+#header h1 {
+	margin: 0px 20px;
+	text-shadow: 0px 1px 3px rgba(0,0,0,.5);
+	color: #fff;
+}
