--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,13 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<header id="header">
+	<h1>ThemeSwitcher</h1>
+</header>
 
-<%= yield %>
+<div class="maincontainer">
+	<%= yield %>
+</div
 
 </body>
 </html>
