--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,7 +10,7 @@
  *
  *= require_self
  *= require_tree .
-
+ *= require codemirror
 */
 
 html {
@@ -24,20 +24,21 @@ body {
 #header {
 	width: 100%;
 	padding: 10px 5px;
-	box-shadow: 0px 2px 5px rgba(0,0,0,.25);
+	box-shadow: 0px 2px 15px rgba(82,176,255,.15);
 
-	background: rgb(115,118,132); /* Old browsers */
-	background: -moz-linear-gradient(top,  rgba(115,118,132,1) 0%, rgba(86,94,99,1) 35%, rgba(40,52,59,1) 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(115,118,132,1)), color-stop(35%,rgba(86,94,99,1)), color-stop(100%,rgba(40,52,59,1))); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top,  rgba(115,118,132,1) 0%,rgba(86,94,99,1) 35%,rgba(40,52,59,1) 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top,  rgba(115,118,132,1) 0%,rgba(86,94,99,1) 35%,rgba(40,52,59,1) 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top,  rgba(115,118,132,1) 0%,rgba(86,94,99,1) 35%,rgba(40,52,59,1) 100%); /* IE10+ */
-	background: linear-gradient(to bottom,  rgba(115,118,132,1) 0%,rgba(86,94,99,1) 35%,rgba(40,52,59,1) 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#737684', endColorstr='#28343b',GradientType=0 ); /* IE6-9 */
+	background: rgb(255,255,255); /* Old browsers */
+	background: -moz-linear-gradient(top,  rgba(255,255,255,1) 0%, rgba(214,214,214,1) 44%, rgba(194,195,198,1) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,1)), color-stop(44%,rgba(214,214,214,1)), color-stop(100%,rgba(194,195,198,1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(214,214,214,1) 44%,rgba(194,195,198,1) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(214,214,214,1) 44%,rgba(194,195,198,1) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(214,214,214,1) 44%,rgba(194,195,198,1) 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  rgba(255,255,255,1) 0%,rgba(214,214,214,1) 44%,rgba(194,195,198,1) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#c2c3c6',GradientType=0 ); /* IE6-9 */
 
 }
 #header h1 {
-	margin: 0px 20px;
-	text-shadow: 0px 1px 3px rgba(0,0,0,.5);
-	color: #fff;
+	margin: 0px 25px 0 25px;
+	font-weight:100;
+	text-shadow: 0px 1px 0px rgba(255,255,255,.8);
+	color: #555;
 }
